# az-rag-experiments

./: .gitignore  README.md  main.py
.github/: copilot-instructions.md
src/az-content-understanding/: .env.example  analyzers.json  azure.yaml  clients.py  ingest_documents.py  main.py  pyproject.toml  vector_store.py
src/az-content-understanding/analyzer_templates/: sales_document.json
src/az-content-understanding/infra/: write_dot_env.sh
src/az-content-understanding/scripts/: create_analyzers.py
