[project]
name = "az-content-understanding"
version = "0.1.0"
description = "Azure Content Understanding sample client"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "azure-identity>=1.23.0",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.17",
    "langchain-community>=0.3.24",
    "azure-search-documents>=11.5.2",
    "langgraph>=0.4.5",
]

[tool.uv]
# uv-specific settings can be added here if needed
